--- a/style-guide.html
+++ b/style-guide.html
@@ -68,6 +68,7 @@
           <blockquote cite="https://en.wikipedia.org/wiki/Style_guide">A style guide (or manual of style) is a set of 
             standards for the writing and design of documents, either for general use or for a specific publication, 
             organization, or field. (It is often called a style sheet, though that term has other meanings.)</blockquote>
+          <p>¡En esta guía de estilo pongo a prueba mis destrezas con HTML y CSS! 8-)</p>
         </header>
       </div>
       <!-- Main jumbotron for a primary marketing message or call to action -->
